[gd_scene load_steps=39 format=3 uid="uid://bremjy710enpy"]

[ext_resource type="Script" uid="uid://cflro1pcqk0lk" path="res://Scenes/Battle/battle.gd" id="1_l8vlc"]
[ext_resource type="PackedScene" uid="uid://c0511bjl6j8f3" path="res://Scenes/Enemy/enemy.tscn" id="2_sol3y"]
[ext_resource type="Script" uid="uid://c2oa66hae52le" path="res://Scenes/UI/hand.gd" id="2_x8kit"]
[ext_resource type="PackedScene" uid="uid://css6f6l0luv0i" path="res://Scenes/card_target_selector/card_target_selector.tscn" id="3_n30ip"]
[ext_resource type="PackedScene" uid="uid://bjpre2elyenf6" path="res://Scenes/Player/player.tscn" id="3_spkpv"]
[ext_resource type="AudioStream" uid="uid://dlxq3kaphatmb" path="res://art/Tyrant_s-Downfall.mp3" id="3_vgqd8"]
[ext_resource type="AudioStream" uid="uid://bok4njnqsu2tv" path="res://art/sounds/Retro Success Melody 01 - sawtooth lead 1.wav" id="4_4l47w"]
[ext_resource type="Script" uid="uid://cj70n1speektp" path="res://Scenes/Enemy/enemy_handeler.gd" id="4_cpenc"]
[ext_resource type="AudioStream" uid="uid://c64k2v3nrmlp1" path="res://art/sounds/UI - Switch 01.wav" id="4_pebnb"]
[ext_resource type="Resource" uid="uid://bj4cudlc1sj74" path="res://characters/vanguard/vanguard.tres" id="4_q8sq6"]
[ext_resource type="Resource" uid="uid://cmh05sjnhljf" path="res://enemies/enemy1/enemy1.tres" id="5_cv3sj"]
[ext_resource type="Texture2D" uid="uid://cxkrojsu1y5a3" path="res://art/1bit/background/Background_undead_01.png" id="5_f8ycv"]
[ext_resource type="Texture2D" uid="uid://d1jmpkqhgfbuq" path="res://art/1bit/background/Background_undead_02.png" id="6_gp70a"]
[ext_resource type="Texture2D" uid="uid://dn1tf4nualhfo" path="res://art/1bit/background/Background_undead_06.png" id="7_f24gg"]
[ext_resource type="Script" uid="uid://bli60g76wg0tb" path="res://Scenes/Player/player_handeler.gd" id="8_1ftam"]
[ext_resource type="Script" uid="uid://ixhaaql0jloi" path="res://Scenes/UI/battle_ui.gd" id="8_7h1jk"]
[ext_resource type="Resource" uid="uid://vyfgwimrjqh0" path="res://enemies/enemy2/enemy2.tres" id="8_bk2s1"]
[ext_resource type="Texture2D" uid="uid://dkx8grnamt822" path="res://art/1bit/background/Background_undead_03.png" id="8_ri5ov"]
[ext_resource type="Texture2D" uid="uid://da34arawf2yu5" path="res://art/1bit/background/Background_undead_04.png" id="9_o05jw"]
[ext_resource type="Texture2D" uid="uid://0hnlrypvn7du" path="res://art/1bit/background/Background_undead_05.png" id="10_xsaun"]
[ext_resource type="PackedScene" uid="uid://bg7tf3vrpwfff" path="res://Scenes/CardUI/mana_ui.tscn" id="11_6goif"]
[ext_resource type="PackedScene" uid="uid://xlssvxwqgfut" path="res://Scenes/UI/tool_tip.tscn" id="12_rw2qe"]
[ext_resource type="Script" uid="uid://bihv6wnb8k7kh" path="res://Scenes/UI/white_flash.gd" id="15_2ee3c"]
[ext_resource type="PackedScene" uid="uid://bw500f1i5gcmf" path="res://Scenes/UI/card_pile_opener.tscn" id="17_3lvuc"]
[ext_resource type="PackedScene" uid="uid://bjijnp3e7egu2" path="res://Scenes/UI/battle_over_panel.tscn" id="17_4r3ak"]
[ext_resource type="PackedScene" uid="uid://wq4bxyhc88bc" path="res://Scenes/UI/card_pile_view.tscn" id="21_dekfb"]
[ext_resource type="PackedScene" uid="uid://camxsiavn7baf" path="res://Scenes/UI/status_view.tscn" id="21_qqhbv"]
[ext_resource type="Texture2D" uid="uid://cfn1pt2ju5cm4" path="res://art/1bit/XaviArt/buttons-ui/end-turn.png" id="22_ew870"]
[ext_resource type="Texture2D" uid="uid://ckgg75srb534v" path="res://art/1bit/XaviArt/buttons-ui/draw-pile-32.png" id="24_iifss"]
[ext_resource type="Texture2D" uid="uid://c442li1cb5k5c" path="res://art/1bit/XaviArt/buttons-ui/draw-pile-40.png" id="25_f8ycv"]
[ext_resource type="Texture2D" uid="uid://b8thptyynsnu1" path="res://art/1bit/XaviArt/buttons-ui/draw-pile-discard_32.png" id="26_gp70a"]
[ext_resource type="Texture2D" uid="uid://c5xwcv46mq0ff" path="res://art/1bit/XaviArt/buttons-ui/draw-pile-discard_40.png" id="27_f24gg"]
[ext_resource type="PackedScene" uid="uid://xaevvjaxcha6" path="res://Weapons/WeaponUI.tscn" id="36_f8ycv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gu1tp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_f8ycv")
}],
"loop": true,
"name": &"background1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_gp70a")
}],
"loop": true,
"name": &"background2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_f24gg")
}],
"loop": true,
"name": &"background3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ri5ov")
}],
"loop": true,
"name": &"background4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_o05jw")
}],
"loop": true,
"name": &"background5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_xsaun")
}],
"loop": true,
"name": &"background6",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skmmx"]
size = Vector2(639.5, 207.5)

[sub_resource type="Animation" id="Animation_nun6g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%EndTurnButton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ew870"]
resource_name = "rotate"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%EndTurnButton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v0du8"]
_data = {
&"RESET": SubResource("Animation_nun6g"),
&"rotate": SubResource("Animation_ew870")
}

[node name="Battle" type="Node2D"]
script = ExtResource("1_l8vlc")
char_stats = ExtResource("4_q8sq6")
music = ExtResource("3_vgqd8")
discard_sound = ExtResource("4_pebnb")
battle_won = ExtResource("4_4l47w")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -7.0
offset_right = 645.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Background" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_gu1tp")
animation = &"background2"
centered = false

[node name="WeaponUI" parent="." instance=ExtResource("36_f8ycv")]
modulate = Color(1, 1, 1, 0)
position = Vector2(36, 272)

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(319.25, 103.25)
shape = SubResource("RectangleShape2D_skmmx")
debug_color = Color(0, 0.6, 0.701961, 0.156863)
metadata/_edit_lock_ = true

[node name="EnemyHandeler" type="Node2D" parent="."]
position = Vector2(315, 94)
script = ExtResource("4_cpenc")

[node name="Enemy2" parent="EnemyHandeler" instance=ExtResource("2_sol3y")]
position = Vector2(111, 37)
stats = ExtResource("8_bk2s1")

[node name="Enemy" parent="EnemyHandeler" instance=ExtResource("2_sol3y")]
position = Vector2(201, 67)
stats = ExtResource("5_cv3sj")

[node name="Enemy2-2" parent="EnemyHandeler" instance=ExtResource("2_sol3y")]
position = Vector2(278, 40)
stats = ExtResource("8_bk2s1")

[node name="Player" parent="." instance=ExtResource("3_spkpv")]
position = Vector2(89, 153)
stats = ExtResource("4_q8sq6")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_n30ip")]

[node name="PlayerHandeler" type="Node" parent="." node_paths=PackedStringArray("player", "hand") groups=["player_handler"]]
script = ExtResource("8_1ftam")
player = NodePath("../Player")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("8_7h1jk")

[node name="Hand" type="HBoxContainer" parent="BattleUI" node_paths=PackedStringArray("player")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -221.0
offset_top = -117.0
offset_right = 217.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("2_x8kit")
player = NodePath("../../Player")

[node name="EdgeUI" parent="BattleUI" instance=ExtResource("11_6goif")]
unique_name_in_owner = true
offset_left = 13.0
offset_top = -84.0
offset_right = 76.0
offset_bottom = -42.0

[node name="EndTurnButton" type="TextureButton" parent="BattleUI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -120.0
offset_right = -16.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(31.6781, 31.0428)
texture_normal = ExtResource("22_ew870")
texture_pressed = ExtResource("22_ew870")
texture_hover = ExtResource("22_ew870")
texture_disabled = ExtResource("22_ew870")
stretch_mode = 5

[node name="Label" type="Label" parent="BattleUI"]
offset_left = 574.0
offset_top = 292.0
offset_right = 614.0
offset_bottom = 307.0
theme_override_colors/font_color = Color(0.333333, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
text = "Done"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") groups=["draw_pile"] instance=ExtResource("17_3lvuc")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -40.0
offset_right = 71.0
offset_bottom = 0.0
grow_vertical = 0
texture_normal = ExtResource("24_iifss")
texture_pressed = ExtResource("25_f8ycv")
texture_hover = ExtResource("25_f8ycv")
stretch_mode = 4
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 18.0
offset_right = 22.0
offset_bottom = 33.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "99"

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_3lvuc")]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("26_gp70a")
texture_pressed = ExtResource("27_f24gg")
texture_hover = ExtResource("27_f24gg")
stretch_mode = 4
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 19.0
offset_right = 22.0
offset_bottom = 34.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "99"
horizontal_alignment = 2

[node name="ToolTipLayer" type="CanvasLayer" parent="BattleUI"]
process_mode = 3
layer = 6

[node name="ToolTip" parent="BattleUI/ToolTipLayer" instance=ExtResource("12_rw2qe")]
unique_name_in_owner = true
process_mode = 0
anchors_preset = -1
anchor_right = 0.51875
anchor_bottom = 0.0555556
offset_top = 3.0
offset_right = 116.0
offset_bottom = 63.0
metadata/_edit_use_anchors_ = true

[node name="ButtonAnimation" type="AnimationPlayer" parent="BattleUI"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_v0du8")
}

[node name="WhiteFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_2ee3c")

[node name="ColorRect" type="ColorRect" parent="WhiteFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="WhiteFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 7

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_4r3ak")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 95

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("21_dekfb")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("21_dekfb")]
unique_name_in_owner = true
visible = false

[node name="StatusViewLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="StatusView" parent="StatusViewLayer" instance=ExtResource("21_qqhbv")]
visible = false

[node name="flip" type="Button" parent="."]
visible = false
offset_left = 494.0
offset_top = 42.0
offset_right = 534.0
offset_bottom = 82.0
text = "flip"

[connection signal="pressed" from="flip" to="." method="_on_flip_pressed"]
